added transactions endpoint
